[package]
name = "keyvalues-parser"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.56"

authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]
keywords = ["keyvalues", "vdf", "steam", "parser"]
description = "A parser/renderer for vdf text"
homepage = "https://github.com/lovecraftianhorror/vdf-rs"
repository = "https://github.com/lovecraftianhorror/vdf-rs"

[dependencies]
pest = { version = "2.3.1", features = ["fast-line-col"] }
pest_derive = "2.3.1"
thiserror = "1.0.24"

[dev-dependencies]
criterion = "0.3.4"
insta = { version = "1.7.1", features = ["ron"] }
pretty_assertions = "1.2.1"
serde = { version = "1.0.126", features = ["derive"] }

[[bench]]
name = "parser"
harness = false
